[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/setting/setting.gd" type="Script" id=1]
[ext_resource path="res://scenes/toggle_button/ToggleButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 64
font_data = ExtResource( 3 )

[sub_resource type="InputEventAction" id=4]
action = "start_game"

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 4 )

[sub_resource type="DynamicFont" id=10]
size = 60
font_data = ExtResource( 3 )

[node name="Setting" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 3.0
margin_bottom = 3.0
mouse_filter = 2
color = Color( 0.286275, 0.368627, 0.698039, 1 )

[node name="Music" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -142.0
margin_top = 187.0
margin_right = -15.0
margin_bottom = 236.0
custom_fonts/font = SubResource( 5 )
text = "Music"

[node name="MusicToggle" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 340.0
margin_top = 189.0
margin_right = 426.0
margin_bottom = 227.0

[node name="ToggleButton" parent="MusicToggle" instance=ExtResource( 2 )]
margin_left = 3.0
margin_top = 6.0
margin_right = 82.0
margin_bottom = 35.0

[node name="Sfx" type="Label" parent="."]
margin_left = 93.0
margin_top = 274.0
margin_right = 183.0
margin_bottom = 323.0
custom_fonts/font = SubResource( 6 )
text = "SFX"

[node name="SfxToggle" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 344.0
margin_top = 279.0
margin_right = 430.0
margin_bottom = 313.0

[node name="ToggleButton" parent="SfxToggle" instance=ExtResource( 2 )]
margin_left = -2.0
margin_top = 3.0
margin_right = 76.0
margin_bottom = 30.0

[node name="GameSound" type="Label" parent="."]
margin_left = 92.0
margin_top = 354.0
margin_right = 220.0
margin_bottom = 455.0
custom_fonts/font = SubResource( 7 )
text = "Game
"

[node name="GameToggle" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 337.0
margin_top = 366.0
margin_right = 424.0
margin_bottom = 397.0

[node name="ToggleButton" parent="GameToggle" instance=ExtResource( 2 )]
margin_left = 7.0
margin_top = 1.0
margin_right = 86.0
margin_bottom = 28.0

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -93.0
margin_top = -150.0
margin_right = 71.0
margin_bottom = -50.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 8 )
shortcut = SubResource( 9 )
text = "Exit"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -116.0
margin_right = 116.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 10 )
text = "Setting"

[connection signal="pressed" from="MusicToggle" to="." method="_on_MusicToggle_pressed"]
[connection signal="pressed" from="SfxToggle" to="." method="_on_SfxToggle_pressed"]
[connection signal="pressed" from="GameToggle" to="." method="_on_GameToggle_pressed"]
[connection signal="pressed" from="ExitButton" to="." method="_on_ExitButton_pressed"]
